- added news api - added image - added local storage

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="view/pronunce.html">Pronunce</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="view/news.html">News</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
