- added unit test case - added vowel finder logic

--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
                             <a class="nav-link" href="view/pronunce.html">Pronunce</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="./vowelFinder.html">Vowel Finder</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="view/news.html">News</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./test/quit.html">QUnit</a>
                         </li>
                     </ul>
                 </div>
