--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </header>
         <article class="row m-auto">
             <section class="col-md-5">
-                <h1 class="text-center">Anil Bomma</h1>
+                <h1 class="text-center">Anil Bomma (AB)</h1>
                 <img class="img-circle" src="assets/photo.jpg" alt="my-photo" />
 
                 <section class="v-box">
